feat: End Step-1

--- a/index.html
+++ b/index.html
@@ -1,11 +1,39 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="es">
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Document</title>
+  <title>Tourism Page</title>
+  <link rel="stylesheet" href="./css/styles.css">
 </head>
 <body>
-  
+  <main>
+    <section class="header">
+      <a href="#" class="logo"><h2>Travel</h2></a>
+      <div class="toggle"><img src="./img/toggle.png" alt="Menu Toogle"></div>
+    </section>
+    <section class="banner">
+      <img src="./img/banner.jpg" alt="" class="fitBg">
+      <div class="content">
+        <h2>Explore The World</h2>
+        <p>
+          Discover the world and awaken your adventurous spirit! In every corner of our planet, there are wonders waiting to be explored. From majestic mountains to lush tropical jungles, immerse yourself in the diversity of cultures and landscapes that will leave you breathless. Turn your dreams into reality as you embark on new experiences, meet fascinating people, and create lasting memories. Are you ready to embark on the adventure of a lifetime? Set off on an unforgettable journey and discover the world that awaits you!
+        </p>
+        <a href="#about" class="btn">Watch More</a>
+      </div>
+    </section>
+    <section class="about" id="about">
+      <div class="contentBx">
+        <h2 class="tittleText">Feel The Beauty Of The World</h2>
+        <p>
+          Discover the beauty of the world and let yourself be amazed by its splendor! In every corner of our planet, an astonishing spectacle awaits, ready to take your breath away. From majestic mountains to paradise beaches, from lush jungles to endless deserts, the diversity of nature invites you to explore and admire its greatness. Open your eyes and your heart, immerse yourself in unforgettable adventures, and find inspiration in every experience. The world awaits you with open arms, ready to gift you with unforgettable moments of pure beauty!
+        </p>
+        <a href="#destination" class="btn">Popular Destination</a>
+        <div class="imgBx">
+          <img src="./img/img1.jpg" alt="">
+        </div>
+      </div>
+    </section>
+  </main>
 </body>
 </html>
