feat: End step.2

--- a/index.html
+++ b/index.html
@@ -44,11 +44,42 @@
       <div class="destinationList">
         <div class="box">
           <div class="imgBox">
-            <img src="./img/destination1.jpg" alt="">
+            <img class="fitBg" src="./img/destination1.jpg" alt="Destination1 image">
+          </div>
+          <div class="content">
+            <h3>Destination One <br><span>Country Name</span></h3>
+          </div>
+        </div>
+        <div class="box">
+          <div class="imgBox">
+            <img class="fitBg" src="./img/destination2.jpg" alt="Destination2 image">
+          </div>
+          <div class="content">
+            <h3>Destination Two <br><span>Country Name</span></h3>
+          </div>
+        </div>
+        <div class="box">
+          <div class="imgBox">
+            <img class="fitBg" src="./img/destination3.jpg" alt="Destination3 image">
+          </div>
+          <div class="content">
+            <h3>Destination three <br><span>Country Name</span></h3>
           </div>
         </div>
       </div>
+      <a href="#about" class="btn">Watch More</a>
     </section>
+    <section class="banner3">
+      <img src="./img/banner3.jpg" alt="Banner3 img" class="fitBg">
+    </section>
+    <footer>
+      <ul class="sci">
+        <li><a href="#"><img src="./img/facebook.png" alt="Facebook img"></a></li>
+        <li><a href="#"><img src="./img/twitter.png" alt="Twitter img"></a></li>
+        <li><a href="#"><img src="./img/instagram.png" alt="Instagram img"></a></li>
+      </ul>
+      <h4 class="copyright">Copyright 2023 <a href="#">Napoleon Anaya</a>. All Right Reserved.</h4>
+    </footer>
   </main>
 </body>
 </html>
