feat: Start step-3

--- a/index.html
+++ b/index.html
@@ -25,14 +25,17 @@
     <section class="about" id="about">
       <div class="contentBx">
         <h2 class="tittleText">Feel The Beauty Of The World</h2>
-        <p>
+        <p class="text">
           Discover the beauty of the world and let yourself be amazed by its splendor! In every corner of our planet, an astonishing spectacle awaits, ready to take your breath away. From majestic mountains to paradise beaches, from lush jungles to endless deserts, the diversity of nature invites you to explore and admire its greatness. Open your eyes and your heart, immerse yourself in unforgettable adventures, and find inspiration in every experience. The world awaits you with open arms, ready to gift you with unforgettable moments of pure beauty!
         </p>
         <a href="#destination" class="btn">Popular Destination</a>
-        <div class="imgBx">
-          <img src="./img/img1.jpg" alt="">
-        </div>
       </div>
+      <div class="imgBx">
+        <img src="./img/img1.jpg" alt="">
+      </div>
+    </section>
+    <section class="banner2">
+      <img src="./img/banner2.jpg" alt="Banner2 img" class="fitBg">
     </section>
     <section class="destination" id="destination">
       <div class="content">
@@ -78,7 +81,9 @@
         <li><a href="#"><img src="./img/twitter.png" alt="Twitter img"></a></li>
         <li><a href="#"><img src="./img/instagram.png" alt="Instagram img"></a></li>
       </ul>
-      <h4 class="copyright">Copyright 2023 <a href="#">Napoleon Anaya</a>. All Right Reserved.</h4>
+      <h4 class="copyright">
+        Copyright 2023 <a href="#">Napoleon Anaya</a>. All Right Reserved.
+      </h4>
     </footer>
   </main>
 </body>
