feat: destination and footer section

--- a/index.html
+++ b/index.html
@@ -40,13 +40,13 @@
     <section class="destination" id="destination">
       <div class="content">
         <h2 class="titleText">The most popular travel destinacions in the word</h2>
-        <p>
+        <p class="text">
           Discover the most popular destinations in the world and let yourself be amazed by their beauty! In every corner of our planet, an astonishing spectacle awaits, ready to take your breath away. From majestic mountains to paradise beaches, from lush jungles to endless deserts, the diversity of nature invites you to explore and admire its greatness. Open your eyes and your heart, immerse yourself in unforgettable adventures, and find inspiration in every experience. The world awaits you with open arms, ready to gift you with unforgettable moments of pure beauty!
         </p>
       </div>
       <div class="destinationList">
         <div class="box">
-          <div class="imgBox">
+          <div class="imgBx">
             <img class="fitBg" src="./img/destination1.jpg" alt="Destination1 image">
           </div>
           <div class="content">
@@ -54,7 +54,7 @@
           </div>
         </div>
         <div class="box">
-          <div class="imgBox">
+          <div class="imgBx">
             <img class="fitBg" src="./img/destination2.jpg" alt="Destination2 image">
           </div>
           <div class="content">
@@ -62,7 +62,7 @@
           </div>
         </div>
         <div class="box">
-          <div class="imgBox">
+          <div class="imgBx">
             <img class="fitBg" src="./img/destination3.jpg" alt="Destination3 image">
           </div>
           <div class="content">
